fix view on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h2{
 	font-weight: 900;
 }
 h3{
+	margin-top: 30px;
 	color: purple;
 	letter-spacing: 5px;
 }
@@ -33,6 +34,7 @@ a{
 	text-align: center;
 	color: #000;
 	font-weight: 500;
+	margin-bottom: 20px;
 }
 .frame-child-100{
 	width: 100%;
@@ -43,7 +45,7 @@ a{
 	align-items: center;
 	width: 485px;
 	height: 402px;
-	margin: 60px 0 0 0;
+	margin: 10px 0 0 0;
 }
 
 @media (max-width: 600px){
